--- a/projects/Coding_Project/styles/main.css
+++ b/projects/Coding_Project/styles/main.css
@@ -26,8 +26,9 @@
   position: absolute;
   top: 100px;
   right: 15%;
-  height: 500px;
-  width: 450px;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 31vw;
   padding: 75px 50px;
 }
 .form-container .header-text {
@@ -37,12 +38,11 @@
   margin-bottom: 10px;
 }
 .form-container .header-text h2 {
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font: normal normal 900 36px/53px Heebo;
   margin-bottom: 20px;
 }
 .form-container .header-text p {
-  font-size: 20px;
+  font: normal normal normal 20px/29px Heebo;
   margin-bottom: 25px;
 }
 .form-container .form {
@@ -53,6 +53,7 @@
 }
 .form-container .form label {
   margin-bottom: 5px;
+  font: normal normal bold 16px/24px Heebo;
 }
 .form-container .form input {
   height: 40px;
@@ -69,10 +70,10 @@
   width: 40%;
   background-color: #D31C75;
   color: white;
-  font-size: 20px;
-  font-weight: bolder;
+  font: normal normal bold 22px/30px Heebo;
   transition: 0.5s;
   line-height: 40px;
+  border: none;
 }
 .form-container .form button:hover {
   background-color: rgba(211, 28, 116, 0.462745098);
@@ -98,10 +99,11 @@
     align-items: center;
   }
   .form-container .header-text h2 {
-    font-size: 30px;
+    font: normal normal 900 25px/30px Heebo;
     width: 100%;
   }
   .form-container .header-text p {
+    font: normal normal normal 15px/22px Heebo;
     width: 100%;
   }
   .form-container .form label {
@@ -109,11 +111,12 @@
     margin-bottom: 5px;
   }
   .form-container .form input {
+    font: normal normal bold 14px/21px Heebo;
     height: 35px;
     margin-bottom: 20px;
   }
   .form-container .form button {
-    font-size: 20px;
+    font: normal normal bold 15px/20px Heebo;
     margin-top: 0px;
     width: 30%;
   }
