--- a/projects/Coding_Project/styles/main.scss
+++ b/projects/Coding_Project/styles/main.scss
@@ -26,8 +26,8 @@ $boxgray:#1A1A1AD4;
     position: absolute;
     top: 100px;
     right: 15%;
-    height: 500px;
-    width: 450px;
+    height:fit-content;
+    width: 31vw;
     padding: 75px 50px;
 
         .header-text{
@@ -37,13 +37,12 @@ $boxgray:#1A1A1AD4;
             margin-bottom: 10px;
 
                 h2{
-                    font-size: 30px;
-                    font-family: Arial, Helvetica, sans-serif;
+                    font: normal normal 900 36px/53px Heebo;
                     margin-bottom: 20px;
                 }
 
                 p{
-                    font-size: 20px;
+                    font: normal normal normal 20px/29px Heebo;
                     margin-bottom: 25px;
                 }
         }
@@ -56,6 +55,7 @@ $boxgray:#1A1A1AD4;
 
             label{
                 margin-bottom: 5px;
+                font: normal normal bold 16px/24px Heebo;
             }
 
             input{
@@ -74,10 +74,10 @@ $boxgray:#1A1A1AD4;
                 width: 40%;
                 background-color: #D31C75;
                 color: white;
-                font-size: 20px;
-                font-weight: bolder;
+                font: normal normal bold 22px/30px Heebo;
                 transition: 0.5s;
                 line-height: 40px;
+                border: none;
 
                 &:hover{
                     background-color: #d31c7476;
@@ -107,11 +107,12 @@ $boxgray:#1A1A1AD4;
                 align-items: center;
             
                     h2{
-                        font-size: 30px;
+                        font: normal normal 900 25px/30px Heebo;
                         width: 100%;
                     }
 
                     p{
+                        font: normal normal normal 15px/22px Heebo;
                         width:100%;
                     } 
             }
@@ -123,12 +124,13 @@ $boxgray:#1A1A1AD4;
                 }
 
                 input{
+                    font: normal normal bold 14px/21px Heebo;
                     height: 35px;
                     margin-bottom: 20px;
                 }
 
                 button{
-                    font-size: 20px;
+                    font: normal normal bold 15px/20px Heebo;
                     margin-top: 0px;
                     width: 30%;
                 }
