--- a/projects/Currency_Project/styles/main.css
+++ b/projects/Currency_Project/styles/main.css
@@ -4,35 +4,65 @@
     box-sizing: border-box;
 }
 
-.border{
-    margin-top: 25%;
-    width: 95%;
-    height: auto;
+.oxanium-bold {
+  font-family: "Oxanium", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 
-.carousel-item img {
-    max-height: 100vh;
-    max-width: 100vw;
-    object-fit: cover;
+.oxanium-light {
+    font-family: "Oxanium", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
+
+
+.hero{
+    height: 600px;
 }
 
-form img{
-    height: 80px;
+.col{
+    border-radius: 15px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.479);
 }
 
-#exampleInputEmail1::placeholder {
-    color: transparent;
+.img1{
+    background-image: url(../images/graph3.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 200px;
+    width: 100px;
 }
 
-#exampleInputPassword1::placeholder {
-    color: transparent;
+.img2{
+    background-image: url(../images/btc.jpg);
+    background-position: center;
+    background-size: cover;
 }
+
+.img3{
+    background-image: url(../images/graph4.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 200px;
+    width: 100px;
+}
+
+.img4{
+    background-image: url(../images/graph.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+
+.kripto{
+    color: blue;
+}
+
 @media (max-width:800px) {
-    .carousel-inner, .carousel-item img {
-    max-height: 50vh;
-    max-width: 100vw;
-    object-fit: cover;
-    }
+
 
     form{
         height: 50vh;
