--- a/styles/main.css
+++ b/styles/main.css
@@ -64,9 +64,10 @@ body{
     background: rgb(46, 46, 46);
 }
 
-.logo{
+.logo img{
+    filter: invert();
     height: 30px;
-    width: auto;
+    width: auto
         @media (max-width:780px) {
             height: 30px;
             width: 60px;
@@ -74,42 +75,21 @@ body{
 }
 
 .navbar{
-    
-    backdrop-filter:blur(10px);
+    background: rgb(46, 46, 46);
     font-family: "Josefin Sans";
     font-weight: bold;
-    
         .navbar-brand{
             text-transform: uppercase;
-            line-height: 20px;
             font-size: 20px;
         }
 
         .nav-link{
             text-transform: uppercase;
             font-size: 16px;
-            line-height: 16px;
             color: white;
         }
 }
-.navbar .container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between; /* Brand on the left, links on the right */
-    }
 
-    /* Vertically center brand name */
-    .navbar-brand {
-        line-height: 20px;
-    }
-
-    /* Navbar links alignment */
-    .navbar-nav .nav-link {
-        display: flex;
-        align-items: center;
-        padding: 0; /* Remove default padding */
-        height: 30px; /* Match the brand's height for perfect alignment */
-    }
 /*#endregion*/
 
 
@@ -164,8 +144,10 @@ body{
 .hero_img > img {
     height: 100px;
     width: 100px;
-    border-radius: 50%;
+    border-radius: 40%;
     box-shadow: 0px 5px 10px rgb(0, 0, 0);
+    object-fit: cover;
+    
 }
 
 .hero_box p{
