--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,14 @@ a{
     font-style: normal;
 }
 
+.oxanium-600 {
+    font-family: "Oxanium", system-ui;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+
 .btn_styling{
     
     background-color:#8e5cd5;
@@ -76,7 +84,7 @@ body{
 
 .navbar{
     background: rgb(46, 46, 46);
-    font-family: "Josefin Sans";
+    font-family: "Oxanium";
     font-weight: bold;
         .navbar-brand{
             text-transform: uppercase;
@@ -128,9 +136,9 @@ body{
 }
 
 .hero_header {
-    font-family: "Josefin Sans";
+    font-family: "Oxanium";
     font-size: 50px;
-    font-weight: 700;
+    font-weight: 600;
     width: 70%;
     width: fit-content;
 }
@@ -455,7 +463,7 @@ body{
 .footer_items p{
     margin: auto 0px;
     font-size: 20px;
-    font-family: "Josefin Sans";
+    font-family: "Oxanium";
     font-weight: 500;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.333);
     
