--- a/projects/Delivery_Project/styles/main.css
+++ b/projects/Delivery_Project/styles/main.css
@@ -16,15 +16,26 @@
 .header_box{
     background-color: #0EE1E1;
     height: 400px;
+
+        h2{
+            font: normal normal 900 66px/97px Heebo;
+        }       
+        p{
+            font: normal normal normal 20px/29px Heebo;
+        }
 }
 
-.header_box h2{
-    font-size: 70px;
-    font-weight: 900;
-}
+.card{
+    border: none;
+    
+    h3{
+        color: #0EE1E1;
+        font: normal normal 900 30px/44px Heebo;
+    }
 
-.card h3{
-    color: #0EE1E1;
+    p{
+        font: normal normal normal 15px/22px Heebo; 
+    }
 }
 
 .icons{
@@ -39,8 +50,18 @@
     font-weight: bold;
 }
 
-.main_box h2{
-    font-size: 35px;
+.main_box{
+    h2{
+        font: normal normal 900 46px/67px Heebo; 
+    }
+
+    p{
+        font: normal normal normal 15px/22px Heebo;
+    }
+
+    label{
+        font: normal normal bold 13px/19px Heebo;
+    }
 }
 
 .form{
@@ -52,6 +73,7 @@
     border: none;
     padding: 10px;
     height: 50px;
+    font: normal normal bold 20px/28px Heebo;
 }
 
 .input{
@@ -62,6 +84,12 @@
 
 .map{
     background-color: #0EE1E1;
+
+    iframe{
+        max-width: 80%;
+        max-height: auto;
+        margin: auto;
+    }
 }
 
 .social_box {
