--- a/projects/Travel_Project/styles/main.css
+++ b/projects/Travel_Project/styles/main.css
@@ -5,6 +5,7 @@
 }
 
 body{
+    direction: rtl;
     background-color: #E5EEFF;
     display: flex;
     align-items: center;
@@ -26,7 +27,7 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    grid-area: 1/3/3/5;
+    grid-area: 1/1/3/3;
     height: auto;
     background-color: #020253;
     text-align: center;
@@ -35,18 +36,19 @@ body{
 
 #banner h2{
     color:#0EE1DA;
-    font-size: 60px;
     width: 80%;
+    font: normal normal bold 61px/80px Assistant;
 }
 
 #banner p{
     color: #F9F9F9;
-    width: 90%;
-    font-size: 20px;
+    width: 80%;
+    font: normal normal normal 20px/26px Assistant;
 }
 
 #form {
-    grid-area: 4/1/7/3;
+    direction: rtl;
+    grid-area: 4/3/7/5;
     height: auto;
     background-color: #8E097C;
     display: flex;
@@ -64,15 +66,21 @@ body{
 }
 
 #form h3{
-    font-weight: bolder;
+    font: normal normal bold 35px/46px Assistant;
     margin-bottom: 23px;
+}
+
+#form p{
+    font: normal normal normal 20px/26px Assistant;
+    width: 90%;
+    margin-bottom: 40px;
 }
 
 #form label{
     color: #0EE1DA;
     margin-left: auto;
     margin-bottom: 5px;
-    font-weight: bold;
+    font: normal normal bold 16px/24px Heebo;
 }
 
 #form input{
@@ -85,7 +93,7 @@ body{
     margin-top: 20px;
     height: 60px;
     background-color: #0EE1DA;
-    font-weight: bold;
+    font: normal normal bold 24px/33px Heebo;
 }
 
 .grid-item img{
@@ -108,7 +116,11 @@ body{
         grid-area: 1/1/3/3;
 
         h2{
-            font-size: 36px;
+            font: normal normal bold 36px/47px Assistant;
+        }
+
+        p{
+            font: normal normal normal 20px/26px Assistant;
         }
     }
 
@@ -118,12 +130,12 @@ body{
         padding: 60px 20px;
 
         h3 {
-            font-size: 25px;
+            font: normal normal bold 25px/33px Assistant;
             width: 90%;
         }
 
         p {
-            font-size: 15px;
+            font: normal normal normal 15px/19px Assistant;
             width: 90%;
         }
 
@@ -132,11 +144,12 @@ body{
         }
 
         label{
-            font-size: 7px;
+            font: normal normal bold 7px/10px Heebo;
         }
 
         input, button{
             height: 33px;
+            font: normal normal bold 12px/16px Heebo;
         }
 
         textarea{
