--- a/styles/main.css
+++ b/styles/main.css
@@ -72,7 +72,14 @@ body{
     background: rgb(46, 46, 46);
 }
 
-.logo img{
+.logo{
+    font-size: 40px;
+    padding: 0;
+    margin: 0;
+    line-height: 40px;
+}
+
+/* .logo img{
     filter: invert();
     height: 30px;
     width: auto;
@@ -80,7 +87,7 @@ body{
             height: 30px;
             width: 60px;
         }
-}
+} */
 
 .navbar{
     background: rgb(46, 46, 46);
@@ -136,7 +143,7 @@ body{
 }
 
 .hero_header {
-    font-family: "Oxanium";
+    font-family: "Josefin Sans";
     font-size: 50px;
     font-weight: 600;
     width: 70%;
@@ -341,17 +348,19 @@ body{
 .screenshot{
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.416);
     width: 90%;
-    height: auto;
+    height: 90%;
     max-width: 900px;
     max-height: 500px;
     border-radius: 15px;
+   
 }
 
 .screenshot_mobile{
     border-radius: 15px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.416);
-    width: 90%;
-    height: auto;
+    max-width: 100%;
+    max-height: 600px;
+   
 }
 
 .project_preview {
@@ -360,8 +369,8 @@ body{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: auto;
-    padding: 50px;
+    height: 700px;
+    padding: 30px;
 }
 
 /*#region -- Contact Section -- */
