--- a/projects/Consulting_Project/styles/main.css
+++ b/projects/Consulting_Project/styles/main.css
@@ -17,12 +17,13 @@
 
 .phone_box {
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
 .phone {
-  height: 600px;
-  width: 400px;
+  height: 500px;
+  width: 350px;
 }
 @media (max-width: 760px) {
   .phone {
@@ -34,7 +35,7 @@
 
 .text_container h1 {
   color: #FDBD03;
-  font-weight: bolder;
+  font: normal normal 900 66px/97px Heebo;
 }
 @media (max-width: 780px) {
   .text_container h1 {
@@ -45,6 +46,7 @@
 .text_container p {
   margin-left: auto;
   width: 60%;
+  font: normal normal normal 20px/29px Heebo;
 }
 @media (max-width: 780px) {
   .text_container p {
@@ -55,6 +57,12 @@
   }
 }
 
+.form {
+  width: 80%;
+}
+.form label {
+  font: normal normal bold 16px/24px Heebo;
+}
 @media (max-width: 780px) {
   .form {
     margin-inline: auto;
@@ -77,7 +85,7 @@
 .submit {
   background-color: #FDBD03;
   border: none;
-  font-weight: bolder;
+  font: normal normal bold 22px/30px Heebo;
   width: 25%;
 }
 @media (max-width: 780px) {
@@ -87,10 +95,21 @@
   }
 }
 
+.social-box {
+  margin-top: 50px;
+}
+@media (max-width: 780px) {
+  .social-box {
+    margin-top: 80px;
+    margin-bottom: 30px;
+  }
+}
+
 .social {
   display: flex;
   align-items: center;
   justify-content: center;
+  bottom: 0px;
   height: 80px;
   width: 80px;
   background-color: #FDBD03;
@@ -101,7 +120,6 @@
   .social {
     height: 50px;
     width: 50px;
-    margin-top: 80px;
     margin-bottom: 15px;
   }
 }
