--- a/projects/Coding_Project/styles/main.scss
+++ b/projects/Coding_Project/styles/main.scss
@@ -1,3 +1,8 @@
+@mixin flexcolumn{
+    display: flex;
+    flex-direction: column;
+}
+
 $boxgray:#1A1A1AD4;
 
 *{
@@ -19,25 +24,23 @@ $boxgray:#1A1A1AD4;
 }
 
 .form-container{
-    display: flex;
-    flex-direction: column;
+    @include flexcolumn();
     background-color: $boxgray;
     color: white;
     position: absolute;
-    top: 100px;
+    top: 50px;
     right: 15%;
-    height:fit-content;
-    width: 31vw;
+    height: fit-content;
+    width: 30vw;
     padding: 75px 50px;
 
         .header-text{
-            display: flex;
-            flex-direction: column;
+            @include flexcolumn();
             align-content: flex-end;
             margin-bottom: 10px;
 
                 h2{
-                    font: normal normal 900 36px/53px Heebo;
+                    font: normal normal 900 36px/40px Heebo;
                     margin-bottom: 20px;
                 }
 
@@ -48,8 +51,7 @@ $boxgray:#1A1A1AD4;
         }
 
         .form{
-            display: flex;
-            flex-direction: column;
+            @include flexcolumn();
             font-weight: bold;
             font-family: Arial, Helvetica, sans-serif;
 
