--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,6 @@
     box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
-}
-
 a{
     text-decoration: none;
     color: #000000;
@@ -33,8 +29,7 @@ a{
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-  }
-  
+}
 
 .btn_styling{
     
@@ -79,20 +74,11 @@ body{
     line-height: 40px;
 }
 
-/* .logo img{
-    filter: invert();
-    height: 30px;
-    width: auto;
-        @media (max-width:780px) {
-            height: 30px;
-            width: 60px;
-        }
-} */
-
 .navbar{
     background: rgb(46, 46, 46);
     font-family: "Oxanium";
     font-weight: bold;
+
         .navbar-brand{
             text-transform: uppercase;
             font-size: 20px;
@@ -112,23 +98,25 @@ body{
 
 #hero_section{
     display: flex; 
-    min-height: 400px;
-    background-image: url(../images/hero_bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    flex-wrap: wrap;
+    min-height: 400px;
+    background-image: url(../images/hero_bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    
 }
 
 .hero_box{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     width: 60%;
     gap: 20px;
-    align-items: center;
-    justify-content: center;
 }
 
 .hero_text {
@@ -162,7 +150,6 @@ body{
     border-radius: 40%;
     box-shadow: 0px 5px 10px rgb(0, 0, 0);
     object-fit: cover;
-    
 }
 
 .hero_box p{
@@ -170,6 +157,7 @@ body{
     font-size: 20px;
 }
 
+/* buttons on project pages */
 .hero_buttons{
     display: flex;
     align-items: center;
@@ -182,28 +170,28 @@ body{
 
 
 /*#region -- About Me Section -- */
-.aboutMe_container{
+#aboutMe_section{
     background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
     border-top: 2px solid rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .aboutMe_wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 60%;
-    max-width: 90%;
+    max-width: 80%;
     margin-inline: auto;
     height: auto;
-    gap: 7vw;
+    gap: 6vw;
     padding: 30px;
     border-bottom: 3px solid white;
-    
 }
 
 .aboutMe_text{
     display: flex;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     flex-direction: column;
     text-align: center;
     align-items: center;
@@ -217,6 +205,7 @@ body{
 
 .project_icons{
     display: flex;
+
         i{
             filter: invert();
         }
@@ -234,7 +223,7 @@ body{
     margin-top: 40px;
 }
 
-
+/* for project pages */
 .project_icon_container {
     display: flex;
     flex-wrap: wrap;
@@ -251,12 +240,12 @@ body{
 }
 
 
-
 .aboutMe_img{
     margin: 5px;
-    max-width: 80%;
+    min-width: 20%;
+    max-width: 60%;
     border-radius: 20px;
-    border: 5px solid #888;
+    border: 5px double #aeaeae;
 }
 /*#endregion*/
 
@@ -273,7 +262,6 @@ body{
 
 .project_header {
     text-align: center;
-    font-weight: 900;
     font-size: 32px;
     margin-top: 20px;
     padding: 10px 0px;
@@ -300,8 +288,21 @@ body{
     border: 2px groove white;
 } 
 
+.project_card_img{
+    width: 100%;
+    height: 50%;
+}
+
+.project_card_img > img {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
+    object-position: center center;
+}
+
 .project_card_text {
-    background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
+    background: linear-gradient(to right, black, rgba(34, 34, 34, 0.923));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -312,25 +313,9 @@ body{
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 14px;
-    padding: 20px 20px;
+    padding: 15px 20px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.573);
-}
-
-.project_card_text button{
-    padding: 5px 20px;
-}
-
-.project_card_img{
-    width: 100%;
-    height: 50%;
-    overflow:visible;
-}
-
-.project_card_img > img {
-    height: 100%;
-    width: 100%;
-    border-radius: 10px 10px 0px 0px;
 }
 
 .project_card_title {
@@ -338,13 +323,18 @@ body{
     color: rgb(255, 255, 255);
 }
 
-.cardimg{
-   object-fit: cover;
-   object-position: center center;
+.project_blurb{
+    margin-bottom: auto;
+}
+
+.project_card_text button{
+    padding: 5px 20px;
 }
 
 /*#endregion*/
 
+
+/*#region -- Project Page Preview Section -- */
 .screenshot{
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.416);
     width: 90%;
@@ -352,7 +342,6 @@ body{
     max-width: 900px;
     max-height: 500px;
     border-radius: 15px;
-   
 }
 
 .screenshot_mobile{
@@ -360,7 +349,6 @@ body{
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.416);
     max-width: 100%;
     max-height: 600px;
-   
 }
 
 .project_preview {
@@ -373,6 +361,9 @@ body{
     padding: 30px;
 }
 
+/*#endregion*/
+
+
 /*#region -- Contact Section -- */
 #contact_section{
     height: 500px;
@@ -380,9 +371,7 @@ body{
     justify-content: center;
     align-items: center;
     background: rgb(21, 21, 21);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-top: 2px solid white;
-    
 }
 
 .contact_container{
@@ -391,12 +380,11 @@ body{
     align-items: center;
     justify-content: center;
     min-width: 40%;
-    max-width: 90%;
-    height: 80%;
+    max-width: 100%;
+    height: 85%;
     background: linear-gradient(to right, black, rgba(32, 32, 32, 0.923));
     color: #e6e6e6;
-    padding: 20px;
-    gap: 20px;
+    padding: 10px 30px;
     border: 2px solid rgb(125, 125, 125);
     border-radius: 10px;
 }
@@ -405,10 +393,9 @@ body{
     justify-content: center;
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     gap: 10px;
     font-size: 1.1rem;
-   
 }
 
 .contact_field{
@@ -427,15 +414,17 @@ body{
     color: white;
 }
 
-#contact_message{
-    border: none;
-    margin-bottom: 10px;
+.message_container{
+    margin-top: 5px;
 }
 
-#contact_submit{
+.form_submit{
     width: 40%;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
+
+
 /*#endregion*/
 
 
@@ -488,12 +477,14 @@ body{
 .rights{
     display: flex;
     justify-content: space-between;
-    padding: 5px 15px;
-    height: 40px;
+    padding: 0px 15px;
+    line-height: 35px;
+    font-size: 15px;
+    height: 35px;
     width: 100%;
     background-color: #000000;
     color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Josefin Sans";
 }
 /*#endregion*/
 
@@ -504,7 +495,7 @@ body{
     }
 }
 
-@media (max-width:850px){
+@media (max-width:780px){
     .header_container{
         width: 90%;
     }
@@ -513,51 +504,41 @@ body{
        display: none;
     }
 
-    .nav img{
-        display: flex;
-    }
-
     .logo{
-        font-size: 20px;
+        font-size: 30px;
     }
     
     .hero_box{
-        width: 100%;
-        margin: 0px;
-        padding: 0px;
+        width: 90%;
     }
 
     .hero_text p{
-        width: 100%;
+        width: 90%;
     }
 
     .hero_header{
-        font-size: 1.8rem;
+        font-size: 7vw;
     }
 
     .header_text{
         font-size: 1rem;
     }
 
-    .coding_icons img{
-        height:50px;
-        width: 50px;
-    }
-
     .aboutMe_wrapper{
         flex-direction: column-reverse;
-        padding: 20px;
+        padding: 10px 0px;
+        margin: 0;
+        min-width: 90%;
         gap: 30px;
+    }
+
+    .aboutMe_img{
+        margin-top: 10px;
     }
 
     .aboutMe_text{
         width: 100%;
-        font-size: 15px;
         gap: 10px;
-    }
-
-    .aboutMe_wrapper img{
-        width: 50%
     }
 
     .project_card_area{
@@ -568,12 +549,21 @@ body{
         padding-top: 20px;
     }
 
+    #contact_section{
+        margin: 0;
+        padding: 0;
+    }
+    
     .contact_container{
-       
+        width: 100%;
+        border-inline: none;
+        border-width: 1px;
+        border-radius: 0px;
+        margin: 0;
     }
 
     .contact_input{
-        width: 100%;
+        min-width: 60%;
     }
 
     .footer_container{
@@ -584,7 +574,6 @@ body{
         flex-direction: column;
         width: 100%;
         font-size: 12px;
-        
     }
 
     .footer_items{
