--- a/projects/Javascript Projects/Country Data/main.css
+++ b/projects/Javascript Projects/Country Data/main.css
@@ -62,73 +62,37 @@ h1{
     margin: auto;
 }
 
-.country{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.536);
+.countryCard{
+    width: 300px;
+    margin: 0;
+    padding: 0;
+    height: fit-content;
+    max-height: 450px;
+    border: none;
+   
+    background-color: whitesmoke;
     
-}
 
-.nameDiv{
-    background-color: rgb(241, 241, 241);
-    border-radius: 5px 5px 0px 0px;
-    width: 100%;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    text-align: center;
-
-    h2{
-        font-size: 3vh;
-        padding: 10px; 
+    img{
+        width: 100%;
+        height: 200px;
+        border-bottom: 3px groove #474747;
+      
     }
 }
 
-.flag{
-    width: 300px;
-    height: 200px;
+.card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Truncates long text */
 }
+/* .button{
+    transition: 0.3s;
 
-.buttonDiv{
-    background-color: rgb(241, 241, 241);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20%;
-    height: 80px;
-    width: 100%;
-    border-radius: 0px 0px 5px 5px;
-    border-top: 1px solid rgb(0, 0, 0);
-    
-    button:hover{
-        background-color: rgb(0, 0, 0);
+    &:hover{
+        background-color: rgb(20, 52, 127);
         color: white;
     }
+} */
 
-    button{
-        background-color: whitesmoke;
-        font-size: 16px;
-        width: 30%;
-        padding: 10px 20px;
-        border-radius: 5px;
-        border: 1px solid black;
-        transition: 0.5s;
-        
-    }
-}
-
-.statDiv{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
-    height: 100px;
-    width: 100px;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.226);
-}
 
