--- a/projects/Javascript Projects/Country Data/main.css
+++ b/projects/Javascript Projects/Country Data/main.css
@@ -22,30 +22,16 @@ h1{
     margin-block: 10px;
 }
 
-#popupDiv{
+.popupContainer{
+    background-color: aliceblue;
     position: fixed;
-    margin-inline: 35%;
-    text-align: center;
-    width: 30%;
-    height: 300px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border-radius: 5px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.536);
-    z-index: 2;
+    top: 50px;
+    margin: auto;
+    padding: 20px;
+    width: fit-content;
+    z-index: 9;
+    border-radius: 10px;
     
-    button{
-        padding: 10px 20px;
-        border-radius: 5px;
-        border: none;
-        background-color: rgb(97, 96, 96);
-        color: rgb(255, 255, 255);
-        transition: 0.2s;
-
-        &:hover{
-            transform: scale(1.1);
-        }
-    }
 }
 
 .hidden{
@@ -86,13 +72,6 @@ h1{
     overflow: hidden;
     text-overflow: ellipsis; /* Truncates long text */
 }
-/* .button{
-    transition: 0.3s;
 
-    &:hover{
-        background-color: rgb(20, 52, 127);
-        color: white;
-    }
-} */
 
 
