--- a/projects/Javascript Projects/Country Data/main.css
+++ b/projects/Javascript Projects/Country Data/main.css
@@ -12,7 +12,7 @@ body{
     background-color: rgba(0, 0, 0, 0.571);
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     z-index: 1;
 }
 
@@ -23,11 +23,14 @@ h1{
 }
 
 .popupContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     background-color: aliceblue;
     position: fixed;
-    top: 50px;
+    top: 200px;
     margin: auto;
-    padding: 20px;
+    padding: 30px;
     width: fit-content;
     z-index: 9;
     border-radius: 10px;
