--- a/projects/Javascript Projects/TicTacToe/main.css
+++ b/projects/Javascript Projects/TicTacToe/main.css
@@ -13,12 +13,13 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.405);
 }
 
 .square{
     height: 199px;
     width: 100%;
-    background-color: rgb(166, 166, 166);
+    background-color: rgba(166, 166, 166, 0.147);
    
 }
 
@@ -26,6 +27,13 @@
     object-fit: cover;
     height: 100%;
     width: 100%;
+}
+
+.playAgain{
+    display: none;
+    width: fit-content;
+    padding: 10px 25px;
+    margin: 20px 0px;
 }
 
 .x{
