--- a/projects/Javascript Projects/TicTacToe/main.css
+++ b/projects/Javascript Projects/TicTacToe/main.css
@@ -37,7 +37,10 @@
 }
 
 .gameTracker{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(245, 245, 245, 0.83);
     color: black;
     padding: 20px;
