--- a/projects/Javascript Projects/User Login/style.css
+++ b/projects/Javascript Projects/User Login/style.css
@@ -4,6 +4,39 @@
     box-sizing: border-box;
 }
 
+
+.register, .login{
+    background-color: rgb(225, 239, 252);
+    margin: 100px auto;
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    width: fit-content;
+
+    form {
+        gap: 10px;
+    }
+
+    input{
+        width: 100%;
+        padding: 5px;
+    }
+
+    button{
+        padding: 10px 20px;
+        background-color: rgb(152, 180, 255);
+        border: none;
+    }
+
+    p{
+        margin-bottom: 10px;
+    }
+}
+
 .form{
     display: flex;
     flex-direction: column;
@@ -11,8 +44,14 @@
     margin: 10px;
 }
 
+h1{
+    text-align: center;
+    padding: 10px;
+}
+
 #userTable{
-    background-color: aliceblue;
+    background-color: rgb(193, 222, 248);
+    width: 100%;
 
     th, td {
         padding: 10px;
@@ -23,4 +62,76 @@
         padding: 10px 20px;
     }
 
+}
+
+#contrastLayer{
+    position: fixed;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.562);
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
+
+.editUserPopup{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    color: rgb(15, 15, 15);
+    justify-content: center;
+    text-align: center;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    z-index: 2;
+    
+    background-color: rgb(199, 199, 199);
+    border-radius: 10px;
+
+    form{
+        display: flex;
+        
+        
+    }
+
+    input{
+        border-radius: 3px;
+        border: none;
+        margin-block: 5px;
+        padding: 5px;
+    }
+
+    button{
+        color: rgb(255, 255, 255);
+        font-size: 18px;
+        font-weight: bold;
+        background-color: rgb(64, 112, 243);
+        border-radius: 3px;
+        border: none;
+        margin-block: 5px;
+        padding: 10px;
+    }
+
+}  
+
+#manageUsers{
+    display: none;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    gap: 10px;
+    margin: 20px;
+
+    button{
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
 }
