--- a/projects/Javascript Projects/User Login/style.css
+++ b/projects/Javascript Projects/User Login/style.css
@@ -5,7 +5,7 @@
 }
 
 
-.register, .login{
+.register, .login, .landing{
     background-color: rgb(225, 239, 252);
     margin: 100px auto;
     display: flex;
@@ -16,6 +16,7 @@
     justify-content: center;
     height: fit-content;
     width: fit-content;
+    border-radius: 5px;
 
     form {
         gap: 10px;
@@ -26,10 +27,15 @@
         padding: 5px;
     }
 
+    button:hover{
+        background-color: rgb(120, 142, 202);
+    }
     button{
         padding: 10px 20px;
         background-color: rgb(152, 180, 255);
         border: none;
+        border-radius: 5px;
+        transition: 0.5s;
     }
 
     p{
