--- a/projects/Javascript Projects/Math Game/main.css
+++ b/projects/Javascript Projects/Math Game/main.css
@@ -32,9 +32,7 @@ button:hover{
 
 .container{
     background-color: rgb(234, 234, 234);
-    backdrop-filter: blur(2px);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.341);
-    border: 3px groove rgba(21, 62, 158, 0.741);
     border-radius: 5px;
     width: 80%;
     height: fit-content;
@@ -47,25 +45,32 @@ button:hover{
     align-items: center;
     gap: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    @media (max-width: 800px){
+        width: 95%; 
+    }
 }
 
 #dropdowns {
     display: flex;  
     justify-content: space-around;
-    align-items: center;
-    width: 40%;
+    align-items: flex-end;
+    width: 50%;
     padding: 10px;
     gap: 10px;
     background-color: rgba(45, 147, 242, 0.995);
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.536);
 
-    #difficultyDropdown{
-        display: flex;
+    @media (max-width: 800px){
+        width: 100%; 
         flex-direction: column;
-        gap: 10px;
+
+        #difficultyDropdown, #operatorDropdown, #start{
+            width: 100%;
+        }
     }
 
-    #operatorDropdown{
+    #difficultyDropdown, #operatorDropdown{
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -87,7 +92,7 @@ button:hover{
         width: 150px;
         padding: 10px;
         border-radius: 5px;
-        font-size: 24px;
+        font-size: 20px;
         
     }
 }
@@ -98,8 +103,9 @@ button:hover{
     display: flex;  
     flex-direction: column;
     text-align: center;
-    width: 40%;
-    padding: 20px;
+    width: 50%;
+    padding: 30px 20px;
+    margin-block: 10px;
     justify-content: center;
     align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -152,6 +158,10 @@ button:hover{
         padding: 15px;
         border-radius: 5px;
         gap: 5px;
+    }
+
+    @media (max-width:800px){
+        width: 100%;
     }
 }
 
