--- a/projects/Javascript Projects/Memory Game/main.css
+++ b/projects/Javascript Projects/Memory Game/main.css
@@ -12,8 +12,24 @@ body{
     background-color: rgb(17, 17, 17);
 }
 
+h1{
+    margin-top: 20px;
+}
+
 h2, h1{
-    color: whitesmoke;
+    text-align: center;
+    color: rgb(113, 239, 128);
+}
+
+#diffSelect{
+    width: 40%;
+    margin-inline: auto;
+    margin-top: 20px;
+    text-align: center;
+
+    button{
+        border-radius: 5px;
+    }
 }
 
 .container{
@@ -33,7 +49,7 @@ h2, h1{
     height: 100px;
 }
 
-#buttonsContainer{
+#diffSelect{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,12 +68,12 @@ h2, h1{
     padding: 10px 20px;
     background-color: aqua;
     font-size: 24px;
-    width: 100%;
+    width: 200px;
     transition: 0.3s;
 }
 
-#finishedGame{
+#gameEnd{
     text-align: center;
     margin: 50px auto;
-    width: 30%;
+    width: fit-content;
 }
