--- a/projects/Javascript Projects/World Clock/main.css
+++ b/projects/Javascript Projects/World Clock/main.css
@@ -4,12 +4,28 @@
     box-sizing: border-box;
 }
 
+.changeBtn{
+    margin-top: 10px;
+    padding: 2px 10px;
+    background-color: rgb(143, 157, 161);
+    color: black;
+    border-radius: 5px;
+    font-size: 16px;
+    border: none;
+    transition: 0.2s;
+
+        &:hover{
+            background-color: rgb(98, 114, 118);
+        }
+}
+
+
 .container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 10px;
 
         h1{
             color: whitesmoke;
@@ -64,18 +80,18 @@
     }
 }
 
-#ny{
+#africa{
     grid-area: 1/1/3/2;
 }
 
-#jpn{
+#america{
     grid-area: 1/2/2/4;
 }
 
-#lnd{
+#europe{
     grid-area: 2/3/4/4;
 }
 
-#jlm{
+#asia{
     grid-area: 3/1/4/3;
 }
