--- a/projects/Javascript Projects/World Clock/main.css
+++ b/projects/Javascript Projects/World Clock/main.css
@@ -25,8 +25,8 @@ body{
 }
 
 .clock_container{
-    height: 70vh;
-    width: 50%;
+    height: 80vh;
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -36,7 +36,7 @@ body{
     margin-top: 10px;
 }
 
-.clock {
+.grid-item {
     position: relative;
     height: 100%;
     width: 100%;
@@ -48,16 +48,13 @@ body{
     border-radius: 10px;
     box-shadow: 5px 3px 15px rgb(0, 0, 0);
 
-        >div{
-            font-size: 24px;
-        }
-}
-
-.layer{
-    position: absolute;
-    height: inherit;
-    width: inherit;
-    background-color: rgba(0, 0, 0, 0.159);
+    .clockForm{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
 }
 
 .nameTime{
@@ -72,18 +69,18 @@ body{
     }
 }
 
-#africa{
+#clock1{
     grid-area: 1/1/3/2;
 }
 
-#america{
+#clock2{
     grid-area: 1/2/2/4;
 }
 
-#europe{
+#clock3{
     grid-area: 2/3/4/4;
 }
 
-#asia{
+#clock4{
     grid-area: 3/1/4/3;
 }
